--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -50,6 +50,7 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data.OracleClient" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -88,10 +89,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ADCController.cs" />
     <Compile Include="Controllers\WebApiController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ADC\getAdcMedOrdResult.cs" />
+    <Compile Include="Models\ADC\getAdcMedOrdRqBody.cs" />
+    <Compile Include="Models\ADC\updateMedOrdResult.cs" />
+    <Compile Include="Models\ADC\updateMedOrdRqBody.cs" />
+    <Compile Include="Models\ApiResult.cs" />
     <Compile Include="Models\ApiReturnItem.cs" />
     <Compile Include="Models\ETagInfo.cs" />
     <Compile Include="Models\WhMast.cs" />
@@ -101,7 +108,10 @@
     <Compile Include="Models\WhMmInvqty.cs" />
     <Compile Include="Models\WHTRNS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\WebApiADCRepository.cs" />
     <Compile Include="Repository\WebApiRepository.cs" />
+    <Compile Include="Utilities\LogTool.cs" />
+    <Compile Include="Utilities\models\logModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
