--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -19306,6 +19306,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Controllers\ADC\" />
     <Folder Include="Controllers\D\" />
     <Folder Include="Controllers\E\" />
     <Folder Include="Models\CH\" />
